--- a/style.css
+++ b/style.css
@@ -11,5 +11,28 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 100vh;
     margin: 0;
+}
+.key {
+    border: 1px solid #999;
+    background-color: #aaa;
+    display: inline-flex;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 20px;
+    flex-direction: column;
+    position: relative;
+    min-width: 150px;
+    margin: 10px;
+}
+
+.key small {
+    position: absolute;
+    top: -24px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 24px;
 }
